alignment fix (#2460)

--- a/assets/sass/cds/_components.scss
+++ b/assets/sass/cds/_components.scss
@@ -462,8 +462,6 @@
 }
 
 .job-postings-container {
-  width: 65%;
-  margin-left: 2.5rem;
 
   .padding {
     padding: 3rem 0;
