--- a/assets/sass/cds/_sections.scss
+++ b/assets/sass/cds/_sections.scss
@@ -772,8 +772,6 @@ span.livefr {
 }
 
 .work-with-us--apply-now {
-  width: 65%;
-  margin-left: 2.5rem;
 
   h2 {
     color: black;
@@ -808,10 +806,12 @@ span.livefr {
     background-color: black;
     margin-bottom: 2rem;
 
-    label {
+    div {
       cursor: pointer;
       color: white;
       margin: 1rem;
+      font-size: 23px;
+      font-weight: 600;
     }
   }
   .no-file-chosen {
